@@ -21,6 +21,9 @@ Version 2.2.3 - The "Vampires suck" version.
 	Skolnick:
 		* Fix alc and alcc to work with files bigger than 4GB
 
+	Stu Redman:
+		* Fix crash when last category was removed with a completed file in it
+
 	Wuischke:
 		* Add checks to cas to prevent segfaults
 		* Fix wxCas save file dialog for file types
